# daily-stoic-waku

./: .gitignore  Cargo.toml  Dockerfile  README.md  dappnode_package.json  docker-compose.yml  quotes.json
bash_client/: client.sh  dailystoic.proto
src/: main.rs  protocol.rs
